--- a/TopCard/src/swt/swl/topcard/view/CreateUserStoryView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/CreateUserStoryView.fxml
@@ -6,7 +6,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" prefWidth="531.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.CreateTeamController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+	minWidth="-Infinity" prefHeight="130.0" prefWidth="531.0"
+	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="swt.swl.topcard.controller.CreateUserStoryController">
 	<children>
 		<Label layoutX="14.0" layoutY="14.0" text="Create new UserStory">
 			<font>
@@ -14,8 +17,11 @@
 			</font>
 		</Label>
 		<Label layoutX="14.0" layoutY="61.0" text="New UserStory name:" />
-		<TextField fx:id="userStorieTextField" layoutX="346.0" layoutY="56.0" />
-		<Button fx:id="createButton" layoutX="381.0" layoutY="93.0" mnemonicParsing="false" onAction="#create" text="Create" />
-		<Button fx:id="cancelButton" layoutX="454.0" layoutY="93.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+		<TextField fx:id="userStoryTextField" layoutX="346.0"
+			layoutY="56.0" />
+		<Button fx:id="createButton" layoutX="381.0" layoutY="93.0"
+			mnemonicParsing="false" onAction="#create" text="Create" />
+		<Button fx:id="cancelButton" layoutX="454.0" layoutY="93.0"
+			mnemonicParsing="false" onAction="#cancel" text="Cancel" />
 	</children>
 </Pane>
