--- a/TopCard/src/swt/swl/topcard/view/EditRqCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/EditRqCardView.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<ScrollPane prefHeight="830.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.EditRqCardController">
+<ScrollPane prefHeight="830.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.EditRqCardController">
    <content>
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="830.0" prefWidth="836.0">
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="824.0" prefWidth="799.0">
          <children>
-            <VBox layoutX="20.0" layoutY="58.0" prefHeight="738.0" prefWidth="432.0" spacing="20.0">
+            <VBox layoutX="20.0" layoutY="58.0" prefHeight="627.0" prefWidth="432.0" spacing="20.0">
                <children>
                   <HBox prefHeight="6.0" prefWidth="649.0" spacing="155.0">
                      <children>
@@ -70,12 +70,8 @@
                   </HBox>
                </children>
             </VBox>
-            <Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="759.0" text="____________________________________________________________________________________________________" />
+            <Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="791.0" text="_________________________________________________________________________________________________________________________" />
             <Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="198.0" text="Edit Requirement Card: " underline="true" />
-            <Label fx:id="createdAtLabel" layoutX="555.0" layoutY="58.0" prefHeight="27.0" prefWidth="210.0" />
-            <Label fx:id="lastModifiedAtLabel" layoutX="597.0" layoutY="91.0" prefHeight="27.0" prefWidth="210.0" />
-            <Label layoutX="452.0" layoutY="91.0" prefHeight="27.0" prefWidth="145.0" text="Last Modified At:" />
-            <Label layoutX="452.0" layoutY="58.0" prefHeight="27.0" prefWidth="101.0" text="Created At : " />
             <Label fx:id="requirementCardNumberLabel" layoutX="280.0" layoutY="15.0" prefHeight="27.0" prefWidth="121.0" />
             <HBox alignment="BOTTOM_RIGHT" layoutX="343.0" layoutY="745.0" prefHeight="73.0" prefWidth="425.0" spacing="50.0">
                <children>
@@ -83,15 +79,15 @@
                   <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="70.0" prefWidth="200.0" text="Save Changes" />
                </children>
             </HBox>
-            <HBox layoutX="419.0" layoutY="15.0" prefHeight="28.0" prefWidth="350.0">
+            <HBox layoutX="411.0" layoutY="15.0" prefHeight="28.0" prefWidth="264.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="129.0" text="MajorVersion:" />
+                  <Label prefHeight="27.0" prefWidth="99.0" text="MajorVersion:" />
                   <Label fx:id="majorVersionLabel" prefHeight="27.0" prefWidth="30.0" />
-                  <Label prefHeight="27.0" prefWidth="130.0" text=", MinorVersion:" />
+                  <Label prefHeight="27.0" prefWidth="105.0" text=", MinorVersion:" />
                   <Label fx:id="minorVersionLabel" prefHeight="27.0" prefWidth="30.0" />
                </children>
             </HBox>
-            <Pane fx:id="showVoteResultsPane" layoutX="449.0" layoutY="145.0" prefHeight="588.0" prefWidth="259.0" visible="false">
+            <Pane fx:id="showVoteResultsPane" layoutX="452.0" layoutY="118.0" prefHeight="589.0" prefWidth="259.0">
                <children>
                   <Label layoutY="29.0" prefHeight="27.0" prefWidth="121.0" text="Vote Results : " underline="true" />
                   <VBox layoutX="4.0" layoutY="81.0" prefHeight="94.0" prefWidth="261.0">
@@ -173,7 +169,22 @@
                   </HBox>
                </children>
             </Pane>
-            <Button fx:id="showVoteResultsButton" layoutX="449.0" layoutY="183.0" mnemonicParsing="false" onAction="#showVoteResultsButtonClicked" prefHeight="39.0" prefWidth="188.0" text="Show vote Results: " />
+            <VBox layoutX="452.0" layoutY="58.0" prefHeight="38.0" prefWidth="337.0">
+               <children>
+                  <HBox prefHeight="16.0" prefWidth="315.0">
+                     <children>
+                        <Label prefHeight="16.0" prefWidth="129.0" text="Created At : " />
+                        <Label fx:id="createdAtLabel" prefHeight="27.0" prefWidth="210.0" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="16.0" prefWidth="311.0">
+                     <children>
+                        <Label prefHeight="16.0" prefWidth="129.0" text="Last Modified At:" />
+                        <Label fx:id="lastModifiedAtLabel" prefHeight="27.0" prefWidth="210.0" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
       </Pane>
    </content>
