bisl refactoring und so

--- a/TopCard/src/swt/swl/topcard/view/LoginView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/LoginView.fxml
@@ -7,7 +7,7 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
 	minWidth="-Infinity" prefHeight="244.0" prefWidth="367.0"
 	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="swt.swl.topcard.controller.LoginWindowController">
+	fx:controller="swt.swl.topcard.controller.LoginController">
 	<children>
 		<Button fx:id="loginButton" layoutX="70.0" layoutY="122.0"
 			mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="39.0"
