--- a/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
@@ -116,7 +116,7 @@
                   </VBox>
                </children>
             </HBox>
-            <HBox fx:id="menuListHBox" prefHeight="26.0" prefWidth="435.0">
+            <HBox fx:id="menuListHBox" prefHeight="26.0" prefWidth="331.0">
                <children>
                   <MenuButton mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="New">
                     <items>
@@ -137,7 +137,7 @@
             <Label layoutX="704.0" layoutY="18.0" prefHeight="16.0" prefWidth="88.0" text="signed in as: " />
             <Label fx:id="loginNameLabel" layoutX="792.0" layoutY="18.0" prefHeight="16.0" prefWidth="100.0" />
             <Label layoutX="145.0" layoutY="44.0" prefHeight="16.0" prefWidth="529.0" text="- - -  Design options: show MODULES in TABLE or in the PANE on the right ..? - - - " />
-            <Button fx:id="logoutButton" layoutX="825.0" layoutY="39.0" mnemonicParsing="false" onAction="#logoutButtonClicked" text="Logout" />
+            <Button fx:id="logoutButton" layoutX="331.0" mnemonicParsing="false" onAction="#logoutButtonClicked" text="Logout" />
          </children>
       </Pane>
    </children>
