delete button eingefügt(zum testen, weil man immer 3 updates braucht zum löschen(constraints))
bug beim versionieren

--- a/TopCard/src/swt/swl/topcard/view/EditRequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/EditRequirementCardView.fxml
@@ -4,16 +4,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<ScrollPane prefHeight="830.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.EditRequirementCardController">
+<ScrollPane prefHeight="820.0" prefWidth="758.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.EditRequirementCardController">
 	<content>
-		<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="824.0" prefWidth="799.0">
+		<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="813.0" prefWidth="754.0">
 			<children>
-				<VBox layoutX="20.0" layoutY="58.0" prefHeight="627.0" prefWidth="432.0" spacing="20.0">
+				<VBox layoutX="20.0" layoutY="58.0" prefHeight="627.0" prefWidth="419.0" spacing="20.0">
 					<children>
 						<HBox prefHeight="6.0" prefWidth="649.0" spacing="155.0">
 							<children>
 								<Label text="Title:" />
-								<TextField fx:id="titleTextField" layoutX="138.0" layoutY="10.0" />
+								<TextField fx:id="titleTextField" layoutX="138.0" layoutY="10.0" prefHeight="26.0" prefWidth="178.0" />
 							</children>
 						</HBox>
 						<HBox fx:id="modulesHBox" prefHeight="34.0" prefWidth="546.0" spacing="120.0">
@@ -70,98 +70,99 @@
 						</HBox>
 					</children>
 				</VBox>
-				<Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="791.0" text="_________________________________________________________________________________________________________________________" />
-				<Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="198.0" text="Edit Requirement Card: " underline="true" />
-				<Label fx:id="requirementCardNumberLabel" layoutX="280.0" layoutY="15.0" prefHeight="27.0" prefWidth="121.0" />
-				<HBox alignment="BOTTOM_RIGHT" layoutX="343.0" layoutY="745.0" prefHeight="73.0" prefWidth="425.0" spacing="50.0">
+				<Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="752.0" text="___________________________________________________________________________________________________________________" />
+				<Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="164.0" text="Edit Requirement Card: " underline="true" />
+				<HBox alignment="BOTTOM_RIGHT" layoutX="301.0" layoutY="737.0" prefHeight="73.0" prefWidth="425.0" spacing="50.0">
 					<children>
 						<Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeWindow" prefHeight="70.0" prefWidth="200.0" text="Close without saving" />
 						<Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="70.0" prefWidth="200.0" text="Save Changes" />
 					</children>
 				</HBox>
-				<HBox layoutX="411.0" layoutY="15.0" prefHeight="28.0" prefWidth="258.0">
+				<HBox layoutX="439.0" layoutY="58.0" prefHeight="28.0" prefWidth="313.0">
 					<children>
-						<Label prefHeight="27.0" prefWidth="99.0" text="MajorVersion:" />
-						<Label fx:id="majorVersionLabel" prefHeight="27.0" prefWidth="30.0" />
-						<Label prefHeight="27.0" prefWidth="99.0" text=", MinorVersion:" />
-						<Label fx:id="minorVersionLabel" prefHeight="27.0" prefWidth="30.0" />
+                  <Label layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="56.0" text="RQID:" />
+      				<Label fx:id="requirementCardNumberLabel" prefHeight="27.0" prefWidth="46.0" />
+						<Label prefHeight="27.0" prefWidth="106.0" text="MajorVersion:" />
+						<Label fx:id="majorVersionLabel" prefHeight="27.0" prefWidth="44.0" />
+						<Label prefHeight="27.0" prefWidth="118.0" text=", MinorVersion:" />
+						<Label fx:id="minorVersionLabel" prefHeight="27.0" prefWidth="41.0" />
 					</children>
 				</HBox>
-				<Pane fx:id="showVoteResultsPane" layoutX="452.0" layoutY="118.0" prefHeight="589.0" prefWidth="259.0">
+				<Pane fx:id="showVoteResultsPane" layoutX="452.0" layoutY="129.0" prefHeight="517.0" prefWidth="219.0">
 					<children>
-						<Label layoutY="29.0" prefHeight="27.0" prefWidth="121.0" text="Vote Results : " underline="true" />
-						<VBox layoutX="4.0" layoutY="81.0" prefHeight="94.0" prefWidth="261.0">
+						<Label layoutY="29.0" prefHeight="27.0" prefWidth="98.0" text="Vote Results : " underline="true" />
+						<VBox layoutX="4.0" layoutY="81.0" prefHeight="94.0" prefWidth="214.0">
 							<children>
 								<HBox prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
-										<Label fx:id="descriptionPreciseVoteResultLabel" prefHeight="27.0" prefWidth="102.0" text="voteResult" />
+										<Label fx:id="descriptionPreciseVoteResultLabel" prefHeight="18.0" prefWidth="73.0" text="voteResult" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
-										<Label fx:id="descriptionUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="91.0" text="voteResult" />
+										<Label fx:id="descriptionUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="71.0" text="voteResult" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Correct:" />
-										<Label fx:id="descriptionCorrectVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="94.0" text="voteResult" />
+										<Label fx:id="descriptionCorrectVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="73.0" text="voteResult" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
-										<Label fx:id="descriptionCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="93.0" text="voteResult" />
+										<Label fx:id="descriptionCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="71.0" text="voteResult" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Atomic:" />
-										<Label fx:id="descriptionAtomicVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="93.0" text="voteResult" />
+										<Label fx:id="descriptionAtomicVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="70.0" text="voteResult" />
 									</children>
 								</HBox>
 							</children>
 						</VBox>
-						<VBox layoutX="4.0" layoutY="253.0" prefHeight="94.0" prefWidth="261.0">
+						<VBox layoutX="4.0" layoutY="241.0" prefHeight="94.0" prefWidth="214.0">
 							<children>
 								<HBox prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
-										<Label fx:id="rationalePreciseVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="96.0" text="voteResult" />
+										<Label fx:id="rationalePreciseVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="74.0" text="voteResult" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
-										<Label fx:id="rationaleUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="99.0" text="voteResult" />
+										<Label fx:id="rationaleUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="71.0" text="voteResult" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Traceable:" />
-										<Label fx:id="rationaleTraceableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="91.0" text="voteResult" />
+										<Label fx:id="rationaleTraceableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="72.0" text="voteResult" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
-										<Label fx:id="rationaleCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="98.0" text="voteResult" />
+										<Label fx:id="rationaleCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="74.0" text="voteResult" />
 									</children>
 								</HBox>
-								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="215.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Consistent: " />
-										<Label fx:id="rationaleConsistentVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="99.0" text="voteResult" />
+										<Label fx:id="rationaleConsistentVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="73.0" text="voteResult" />
 									</children>
 								</HBox>
 							</children>
 						</VBox>
-						<Label layoutY="226.0" prefHeight="27.0" prefWidth="259.0" text="___________Rationale___________" />
-						<Label layoutX="4.0" layoutY="58.0" prefHeight="27.0" prefWidth="261.0" text="__________Description __________" />
-						<Label layoutX="5.0" layoutY="514.0" prefHeight="27.0" prefWidth="250.0" text="__________FitCriterion:__________" />
-						<HBox layoutX="4.0" layoutY="547.0" prefHeight="18.0" prefWidth="210.0">
+						<Label layoutX="8.0" layoutY="214.0" prefHeight="27.0" prefWidth="208.0" text="___________Rationale___________" />
+						<Label layoutX="6.0" layoutY="56.0" prefHeight="27.0" prefWidth="212.0" text="__________Description __________" />
+						<Label layoutX="6.0" layoutY="462.0" prefHeight="27.0" prefWidth="212.0" text="__________FitCriterion:__________" />
+						<HBox layoutX="7.0" layoutY="489.0" prefHeight="18.0" prefWidth="210.0">
 							<children>
 								<Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
 								<Label fx:id="fitCriterionCompleteVoteResultLabel" prefHeight="27.0" prefWidth="102.0" text="voteResult" />
@@ -169,22 +170,23 @@
 						</HBox>
 					</children>
 				</Pane>
-				<VBox layoutX="452.0" layoutY="58.0" prefHeight="38.0" prefWidth="337.0">
+				<VBox layoutX="439.0" layoutY="9.0" prefHeight="38.0" prefWidth="313.0">
 					<children>
 						<HBox prefHeight="16.0" prefWidth="315.0">
 							<children>
 								<Label prefHeight="16.0" prefWidth="129.0" text="Created At : " />
-								<Label fx:id="createdAtLabel" prefHeight="27.0" prefWidth="210.0" />
+								<Label fx:id="createdAtLabel" prefHeight="16.0" prefWidth="183.0" />
 							</children>
 						</HBox>
 						<HBox prefHeight="16.0" prefWidth="311.0">
 							<children>
 								<Label prefHeight="16.0" prefWidth="129.0" text="Last Modified At:" />
-								<Label fx:id="lastModifiedAtLabel" prefHeight="27.0" prefWidth="210.0" />
+								<Label fx:id="lastModifiedAtLabel" prefHeight="16.0" prefWidth="184.0" />
 							</children>
 						</HBox>
 					</children>
 				</VBox>
+            <Button fx:id="deleteRequirementButton" layoutX="439.0" layoutY="94.0" mnemonicParsing="false" onAction="#deleteRequirementButtonClicked" text="Delete Requirement" />
 			</children>
 		</Pane>
 	</content>
